--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,15 @@
 }
 
 body {
-	
 	min-height: 100vh;
+  min-width: 100vh;
+
 	margin: 0;
+
+  background-image: url('../static/pascal-debrunner-b-zyMn_e_R4-unsplash.jpg');
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
